<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.hendriebeats.remindme.FullTaskActivity">

    <LinearLayout
        android:id="@+id/fullTaskLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="3">

        <Button
            android:id="@+id/fullShareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_task"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fullUpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_task"
            android:layout_weight="1" />

        <Button
            android:id="@+id/fullDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_task"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullTaskLayoutButtons"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fullTitleLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_txt"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/fullTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fullDescriptionLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/fullDescriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fullDateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_txt"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/fullDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fullTimeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_txt"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/fullTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fullLocationLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_txt"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <LinearLayout
                android:id="@+id/locationInfoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fullPlaceTitleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/fullPlaceAddressTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fullDoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
